@@ -1119,6 +1119,9 @@ right aligned (this SVG image keeps the aspect ratio):</p>
 reStructuredText, the markup syntax</object>
 <p class="caption">SVG image in a figure.</p>
 </div>
+<object class="align-right" data="../../../docs/user/rst/images/biohazard-bitmap.svg" style="width: 3em;" type="image/svg+xml">
+../../../docs/user/rst/images/biohazard-bitmap.svg</object>
+<p>An SVG image with embedded bitmap. Should be 3 em wide, right aligned.</p>
 </div>
 <div class="section" id="swf-images">
 <h2><a class="toc-backref" href="#id75">2.25&nbsp;&nbsp;&nbsp;SWF Images</a></h2>
